tests/ui/derives/derives-span-Hash-enum.stderr
error[E0277]: the trait bound `Error: Hash` is not satisfied
  --> $DIR/derives-span-Hash-enum.rs:8:6
   |
LL | #[derive(Hash)]
   |          ---- in this derive macro expansion
...
LL |      Error
   |      ^^^^^ the trait `Hash` is not implemented for `Error`
   |
help: consider annotating `Error` with `#[derive(Hash)]`
   |
LL + #[derive(Hash)]
LL | struct Error;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
